force-app/main/default/objects/Persona__c/Persona__c.object-meta.xml
<CustomObject>
    <description>Represents a customers business relationship context</description>
    <label>Persona</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Persona Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>