force-app/main/default/objects/Persona__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Date when the persona relationship ended</description>
    <inlineHelpText>When this persona relationship ended (blank if active)</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>