force-app/main/default/objects/Persona__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Formula field indicating if persona is currently active</description>
    <formula>ISBLANK(End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if this persona relationship is currently active</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>