force-app/main/default/objects/Persona__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <description>Customer name associated with this persona</description>
    <inlineHelpText>Name for this persona</inlineHelpText>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>