force-app/main/default/objects/Persona__c/fields/Persona_ID__c.field-meta.xml
<CustomField>
    <fullName>Persona_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <description>External ID for persona from OCV</description>
    <externalId>true</externalId>
    <inlineHelpText>Persona unique ID from One Customer View</inlineHelpText>
    <label>Persona ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>