force-app/main/default/objects/Persona__c/fields/Persona_Type__c.field-meta.xml
<CustomField>
    <fullName>Persona_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Type of business relationship persona</description>
    <inlineHelpText>The relationship type for this persona</inlineHelpText>
    <label>Persona Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>