force-app/main/default/objects/Persona__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Date when the persona relationship commenced</description>
    <inlineHelpText>When this persona relationship started</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>